--- a/app/src/main/res/layout/activity_mahasiswa_main.xml
+++ b/app/src/main/res/layout/activity_mahasiswa_main.xml
@@ -245,7 +245,15 @@
                     android:layout_margin="8dp"/>
 
             </GridLayout>
-
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnLogout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="🚪 Logout"
+                app:cornerRadius="5dp"
+                app:backgroundTint="#B00020"
+                android:textColor="#FFFFFF"
+                android:layout_marginBottom="16dp"/>
         </LinearLayout>
     </ScrollView>
     <com.google.android.material.bottomnavigation.BottomNavigationView
